opdracht-2-af-npy

--- a/deel-2-flexbox-layout/opdracht-1/index.html
+++ b/deel-2-flexbox-layout/opdracht-1/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles/global-styles.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/css-2.css">
     <title>Flexbox-opdracht: layouts maken (1)</title>
 </head>
 <body>
 <header>Header</header>
-<main>
+<main class="flex-container">
     <article class="flex-container">
         Article
         <!--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
