--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,26 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
+    <div class="intro">
         <h1>All Your Business Data in One Place</h1>
-        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
-            analytics tools.</h3>
+        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your
+            favorite BI or analytics tools.</h3>
     </div>
+    &nbsp &nbsp;
+<nav>
+        <p>
+            Dertig woorden nou ik begin dat is vijf en nu 8 nu alweer vijftien en zo als je nog even
+            rustig doortypt heb je zo dertig woorden die je kan gebruiken.
+        </p>
+        <p>
+            Dertig woorden nou ik begin dat is vijf en nu 8 nu alweer vijftien en zo als je nog even
+            rustig doortypt heb je zo dertig woorden die je kan gebruiken.
+        </p>
+        <p>
+            Dertig woorden nou ik begin dat is vijf en nu 8 nu alweer vijftien en zo als je nog even
+            rustig doortypt heb je zo dertig woorden die je kan gebruiken.
+        </p>
+</nav>
 </body>
 </html>
+
